Opened 10 years ago
Closed 10 years ago
#5826 closed defect (fixed)
Samplerate is wrong when M4A ALAC file converted to WAVE
| Reported by: | liuwei | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | undetermined |
| Version: | git-master | Keywords: | alac regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description (last modified by )
When using newest git ffmpeg to convert a 96K samplerate alac m4a file to wav,the wav samplerate is 48K.
But ffmpeg-2.7.2 is ok.
./ffmpeg -i 2L50SACD_tr01_multi_96.m4a test.wav
git version 1.7.2.5
This is newest ffmpeg log:
./ffmpeg -i 2L50SACD_tr01_multi_96.m4a
ffmpeg version N-81555-g496d97f Copyright (c) 2000-2016 the FFmpeg developers
built with gcc 4.4.5 (Debian 4.4.5-8)
configuration: --prefix=/home/liuw/open_source/ffmpeg_git/ --enable-debug --disable-optimizations --disable-yasm --disable-asm --disable-pthreads
libavutil 55. 29.100 / 55. 29.100
libavcodec 57. 54.102 / 57. 54.102
libavformat 57. 48.102 / 57. 48.102
libavdevice 57. 0.102 / 57. 0.102
libavfilter 6. 60.100 / 6. 60.100
libswscale 4. 1.100 / 4. 1.100
libswresample 2. 1.100 / 2. 1.100
[alac @ 0xb45e470] Warning: not compiled with thread support, using thread emulation
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from '2L50SACD_tr01_multi_96.m4a':
Metadata:
major_brand : M4A
minor_version : 0
compatible_brands: M4A mp42isom
creation_time : 2016-09-05T07:34:08.000000Z
track : 1/11
disc : 1/1
album : DIVERTIMENTI
album_artist : TrondheimSolistene
artist : TrondheimSolistene
comment : 2L50SACD All rights reserved Lindberg Lyd AS, Norway
composer : Benjamin Britten
PERFORMER : TrondheimSolistene
title : Britten: Simple Symphony 1
encoder : refalac 1.13, Apple Lossless Encoder
date : 14.04.2008
Duration: 00:03:01.75, start: 0.000000, bitrate: 6873 kb/s
Stream #0:0(und): Audio: alac (alac / 0x63616C61), 48000 Hz, 5.1, s32p (24 bit), 6872 kb/s (default)
Metadata:
creation_time : 2016-09-05T07:34:08.000000Z
This is ffmpeg-2.7.2 log:
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from '2L50SACD_tr01_multi_96.m4a':
Metadata:
major_brand : M4A
minor_version : 0
compatible_brands: M4A mp42isom
creation_time : 2016-09-05 07:34:08
track : 1/11
disc : 1/1
album : DIVERTIMENTI
album_artist : TrondheimSolistene
artist : TrondheimSolistene
comment : 2L50SACD All rights reserved Lindberg Lyd AS, Norway
composer : Benjamin Britten
PERFORMER : TrondheimSolistene
title : Britten: Simple Symphony 1
encoder : refalac 1.13, Apple Lossless Encoder
date : 14.04.2008
Duration: 00:03:01.75, start: 0.000000, bitrate: 6873 kb/s
Stream #0:0(und): Audio: alac (alac / 0x63616C61), 96000 Hz, 5.1, s32p (24 bit), 6872 kb/s (default)
Metadata:
creation_time : 2016-09-05 07:34:08
Attachments (1)
Change History (6)
comment:1 by , 10 years ago
follow-up: 3 comment:2 by , 10 years ago
| Description: | modified (diff) |
|---|---|
| Keywords: | alac regression added |
| Priority: | normal → important |
| Version: | unspecified → git-master |
Please provide an input sample.
by , 10 years ago
| Attachment: | 2L50SACD_tr01_multi_96_cut.m4a added |
|---|
comment:3 by , 10 years ago
Replying to cehoyos:
Please provide an input sample.
Hi, input sample has been uploaded.
It seems something wrong in mov.c, perhaps...
comment:4 by , 10 years ago
| Reproduced by developer: | set |
|---|---|
| Status: | new → open |
Regression since 3c058f57 / 76729970
comment:5 by , 10 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
This should be fixed in 656feb641de3cd5b9cb4e33ffd3f0ad4664c36d2
Note:
See TracTickets
for help on using tickets.



ffmpeg-3.1.3 is ok, too.